fixing profile list navigation on mobile devices

--- a/src/Components/ProfileItems/SubList/SubList.module.css
+++ b/src/Components/ProfileItems/SubList/SubList.module.css
@@ -43,6 +43,9 @@
   .subList{
     list-style: none;
     padding: 0;
+    z-index: 1;
+    transform: translateX(-100%);
+    background-color: var(--w-color);
   }
   .subList li{
     padding: 20px;
